# aether

./: .gitignore  .gitmodules  LICENSE.txt  README.md  gle.config  justfile  sor  vcpkg-configuration.json
.devcontainer/: devcontainer.json  xhost_stuff.sh
aether/: CMakeLists.txt
aether/include/: dummy.hpp  localization.hpp  map_confident.hpp  map_in_progress.hpp  mapped_localization.hpp  robot_configs.hpp
aether/include/aether/: controller.hpp  dijkstra_path_finder.hpp  dummy_path_finder.hpp  localization.hpp  localization_interface.hpp  map_confident.hpp  map_in_progress.hpp  map_interface.hpp  mapped_localization.hpp  path_finder.hpp  planner.hpp  random.hpp  robot_config.hpp  simple_planner.hpp  types.hpp
aether/src/: controller.cpp  dummy.cpp  map_confident.cpp  map_in_progress.cpp  mapped_localization.cpp  simple_planner.cpp
config/: generate_full_config.py  nominal_config.yaml
config/templates/: robot_config.hpp.em
docker/: docker.just
docker/aether/: Dockerfile  entrypoint.sh
docker/espidf/: Dockerfile
docker/microros/: Dockerfile
esp/: CMakeLists.txt  sdkconfig.defaults.in  sdkconfig.secrets_example
esp/components/aether_esp/: CMakeLists.txt
esp/main/: main.cpp
ros_ws/src/aether_app/: CMakeLists.txt  package.xml
ros_ws/src/aether_app/include/aether_app/: file_path_finder.hpp  online_file_map.hpp
ros_ws/src/aether_app/src/: aether_test.cpp  execute_path.cpp  map_visualizer.cpp  mapped_localization_node.cpp  path_visualizer.cpp  sensors_sync.cpp
ros_ws/src/aether_app/test/: localization_test.cpp  map_test.cpp  motion_model_test.cpp  tof_reading_test.cpp
ros_ws/src/aether_bringup/: CMakeLists.txt  package.xml
ros_ws/src/aether_bringup/config/: config.rviz  gazebo.config  gz_ros_bridge.yaml  robot_config.yaml
ros_ws/src/aether_bringup/config/mazes/: simple.txt
ros_ws/src/aether_bringup/config/paths/: infinity_figure.txt  simple.txt
ros_ws/src/aether_bringup/launch/: aether_sim.launch.py
ros_ws/src/aether_description/: CMakeLists.txt  package.xml
ros_ws/src/aether_description/aether_description/: sdf_utils.py
ros_ws/src/aether_description/models/aether/: imu.sdf.em  inertial_box.sdf.em  inertial_cylinder.sdf.em  model.config  model.sdf  model.sdf.em  motor.sdf.em  tof.sdf.em  wheel.sdf.em
ros_ws/src/aether_description/models/maze_post/: model.config  model.sdf
ros_ws/src/aether_description/models/maze_wall/: model.config  model.sdf
ros_ws/src/aether_gazebo/: CMakeLists.txt  package.xml
ros_ws/src/aether_gazebo/hooks/: aether_gazebo.dsv.in  aether_gazebo.sh.in
ros_ws/src/aether_gazebo/src/: lidar_to_range.cpp
ros_ws/src/aether_gazebo/worlds/: maze_from_config.sdf.em  maze_test.sdf  simple_maze.sdf
ros_ws/src/aether_msgs/: CMakeLists.txt  package.xml
ros_ws/src/aether_msgs/msg/: ImuEncSynced.msg  TofsSynced.msg
stm/: aether.csolution.yml
stm/aether/: .clangd  aether.cproject.yml  main.cpp  vl53l4cd_stm.hpp
stm/aether/include/: vl53l4cd_stm.hpp
stm/aether/src/: main.cpp  vl53l4cd_stm.cpp
stm/aether/vl53l4cd_driver/: LICENSE.txt  changelog.txt
stm/aether/vl53l4cd_driver/include/: vl53l4cd_api.hpp  vl53l4cd_calibration.hpp  vl53l4cd_i2c.hpp
stm/aether/vl53l4cd_driver/include/vl53l4cd_driver/: vl53l4cd_api.hpp  vl53l4cd_calibration.hpp
stm/aether/vl53l4cd_driver/src/: vl53l4cd_api.cpp  vl53l4cd_calibration.cpp
