<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aether_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo-specific implementations for the Aether project</description>
  <maintainer email="wojcikmichal98@gmail.com">Michał Wójcik</maintainer>
  <license>MIT</license>
  <author>Michał Wójcik</author>

  <depend>aether_description</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
